--- a/pom.xml
+++ b/pom.xml
@@ -56,21 +56,25 @@
 
     <repositories>
         <repository>
-            <id>papermc-repo</id>
-            <url>https://papermc.io/repo/repository/maven-public/</url>
-        </repository>
-        <repository>
-            <id>sonatype</id>
-            <url>https://oss.sonatype.org/content/groups/public/</url>
+            <id>artserver</id>
+            <url>https://maven.pkg.github.com/artserver/repo/</url>
         </repository>
     </repositories>
 
     <dependencies>
         <dependency>
             <groupId>com.destroystokyo.paper</groupId>
-            <artifactId>paper-api</artifactId>
+            <artifactId>paper</artifactId>
             <version>1.16.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>artserver</id>
+            <name>artserver</name>
+            <url>https://maven.pkg.github.com/artserver/repo</url>
+        </repository>
+    </distributionManagement>
 </project>
